--- a/00-finished/package.json
+++ b/00-finished/package.json
@@ -17,7 +17,8 @@
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "6.0.2"
+    "react-markdown": "6.0.2",
+    "remark-breaks": "2.0.2"
   },
   "devDependencies": {
     "faker": "5.5.3",
